Fixed md image issue and added custom scrollbar for mozilla

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -6,20 +6,28 @@
 }
 
 html {
+  --primary-accent: #84fab0;
+  --secondary-accent: #8fd3f4;
+  --primary-txt: #fff;
+  --secondary-txt: #212121;
   position: relative;
   height: 100vh;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   background-color: #212121;
-  background-image: linear-gradient(90deg, #84fab0 0%, #8fd3f4 100%);
-  --primary-accent: #84fab0;
-  --secondary-accent: #8fd3f4;
-  --primary-txt: #fff;
-  --secondary-txt: #212121;
+  background-image: linear-gradient(
+    90deg,
+    var(--primary-accent) 0%,
+    var(--secondary-accent) 100%
+  );
+  //Mozilla Scrolbars
+  scrollbar-width: thin;
+  scrollbar-color: #fff var(--secondary-accent);
 }
 
 ::selection {
-  background: #84fab0;
+  background: var(--primary-accent);
+  color: var(--secondary-txt);
 }
 
 ::-webkit-scrollbar {
