--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,7 +105,7 @@
   }
 
   img {
-    width: 100%;
+    max-width: 100%;
     border-radius: 4px;
   }
 }
